# microccg

./: CMakeLists.txt  LICENSE  README  README.md  domain.microRTS.cig2018.planning.nomove.elx  domain.microRTS.cig2018.planrec.nomove.elx  main.cpp  microRTSBot.hpp
ccg/: MicroCCG.java  MicroCCG_v2.java  Pair_CCG.java  domain.microRTS.cig2018.planning.no.attack.elx
lib/: CommWrapper.cpp  CommWrapper.hpp  bot.hpp
osx-executable/: microCCG
